Add status bar to show what's doing on

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 		<script type="text/javascript" src="/player.js"></script>
 	</head>
 	<body>
-		Media Player goes here
+		<div id="status">Loading Player...</div>
 	</body>
 </html>
