--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?> 
 <!DOCTYPE HTML> 
-<html xmlns="http://www.w3.org/1999/xhtml" style="background: grey; padding: 0; height: 100%;"> 
+<html> 
 	<head> 
 		<title>LucOs Media Player</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+		<link href="/player.css" rel="stylesheet">
 		<script type="text/javascript" src="/player.js"></script>
 	</head>
 	<body>
