show artist/cover art

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="/player.js"></script>
 	</head>
 	<body>
+		<div id="cover" />
 		<div id="status">Loading Player...</div>
 	</body>
 </html>
