display next track at bottom

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 	</head>
 	<body>
 		<div id="cover" />
-		<div id="status">Loading Player...</div>
+		<footer>
+			<span id="status">Loading Player...</span>
+			<span id="next">Up next: <span id="nexttrack"> Loading...</span></span>
+		</footer>
 	</body>
 </html>
