add manifest file

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<link href="/player.css" rel="stylesheet">
 		<script type="text/javascript" src="/player.js"></script>
+		<link rel="manifest" href="/manifest.json">
 	</head>
 	<body>
 		<div id="cover" />
