use same logo for favicon

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<link href="/player.css" rel="stylesheet">
 		<script type="text/javascript" src="/player.js"></script>
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="/manifest.json" />
+		<link rel="icon" type="image/jpg" href="/logo.jpg" />
 	</head>
 	<body>
 		<div id="cover" />
