add current track details (and mess around with fonts)

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
 		<link rel="icon" type="image/jpg" href="/logo.jpg" />
 	</head>
 	<body>
-		<div id="cover" />
+		<div id="cover">
+			<span id="nowtitle">Loading Track...</span>
+			<span id="nowartist">Loading Artist...</span>
+		</div>
 		<footer>
-			<span id="status">Loading Player...</span>
+			<span id="status">Loading</span>
 			<span id="next">Up next: <span id="nexttrack"> Loading...</span></span>
 		</footer>
 	</body>
