add button to show playlist

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
 			<span id="nowtitle">Loading Track...</span>
 			<span id="nowartist">Loading Artist...</span>
 		</div>
+		<div id="playlist"></div>
 		<footer>
 			<span id="status">Loading</span>
 			<span id="next">Up next: <span id="nexttrack"> Loading...</span></span>
+			<span id="playlisticon">🗂</span>
 		</footer>
 	</body>
 </html>
