combine state & status logic

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div id="playlist"></div>
 		<footer>
-			<span id="status">Loading</span>
+			<span id="status" class="state">Loading</span>
 			<span id="next">Up next: <span id="nexttrack"> Loading...</span></span>
 			<span id="playlisticon">🗂</span>
 		</footer>
