make changes so things pass in lighthouse, even though I don't see a practical difference

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html> 
 	<head> 
 		<title>LucOs Media Player</title>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
 		<link href="/player.css" rel="stylesheet">
 		<script type="text/javascript" src="/player.js"></script>
 		<link rel="manifest" href="/manifest.json" />
