basic chromecast support (only 1 track)

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
 		<footer>
 			<span id="status" class="state">Loading</span>
 			<span id="next">Up next: <span id="nexttrack"> Loading...</span></span>
+			<google-cast-launcher></google-cast-launcher>
 			<span id="playlisticon">🗂</span>
 		</footer>
+
+		<script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 	</body>
 </html>
