skip to next when receiver gets to end of track

--- a/public/receiver.html
+++ b/public/receiver.html
@@ -4,13 +4,7 @@
 		src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
 	</head>
 	<body>
-		<div style="background: white; font-color: navy;">
-			<h1>Playlist</h1>
-			<ol id="tracks">
-				<li>Loading...</li>
-			</ol>
-		</div>
-		<cast-media-player></cast-media-player>
+		<h1>Test app for Google Cast devices</h1>
 		<script type="text/javascript" src="/receiver.js"></script>
 	</body>
 </html>
